--- a/march/week-1/meeting-4/index.html
+++ b/march/week-1/meeting-4/index.html
@@ -10,6 +10,8 @@
     <div class="root" id="root"></div>
 
     <!-- File Javascript berada -->
-    <script type="module" src="main.js"></script>
+    <script src="javascripts/getByClass.js"></script>
+    <script src="javascripts/getById.js"></script>
+    <script src="javascripts/querySelector.js"></script>
   </body>
 </html>
