--- a/march/week-2/meeting-2/div.html
+++ b/march/week-2/meeting-2/div.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>Judul</title>
+    <meta name="description" content="Ini website" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet" />
+    <!-- CDN -->
   </head>
   <body>
-    <div id="root"></div>
-
-    <script type="module" src="main.js"></script>
+    <div>ini pembungkus</div>
   </body>
 </html>
