--- a/march/week-2/meeting-1/index.html
+++ b/march/week-2/meeting-1/index.html
@@ -11,5 +11,6 @@
 
     <button onclick="myFunction()">Click</button>
     <script src="event.js"></script>
+    <script src="strorage.js"></script>
   </body>
 </html>
