--- a/march/week-2/meeting-2/div.html
+++ b/march/week-2/meeting-2/div.html
@@ -11,6 +11,6 @@
     <!-- CDN -->
   </head>
   <body>
-    <div>ini pembungkus</div>
+    <div class="container">ini pembungkus</div>
   </body>
 </html>
